tests/ui/hygiene/intercrate.stderr
error: type `fn() -> u32 {foo::bar::f}` is private
  --> $DIR/auxiliary/intercrate.rs:8:13
   |
LL |         pub macro m() {
   |         ----------- in this expansion of `intercrate::foo::m!`
LL |             f()
   |             ^ private type
   |
  ::: $DIR/intercrate.rs:8:16
   |
LL |     assert_eq!(intercrate::foo::m!(), 1);
   |                --------------------- in this macro invocation

error: aborting due to previous error

